<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toTopOf="@id/topGuide" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:hint="@string/type"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yearsEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:hint="@string/years"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@+id/typeEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ownerEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:hint="@string/owner"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@+id/yearsEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/razaEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:hint="@string/raza"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@+id/ownerEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pesoEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopEditText"
        android:hint="@string/peso"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:layout_constraintTop_toBottomOf="@+id/razaEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:elevation="10dp"
        android:text="@string/register_button"
        android:textColor="@color/white"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomGuide"
        app:layout_constraintEnd_toEndOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/startGuide"
        app:strokeColor="@color/design_default_color_on_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>